k8s/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: 025066239748.dkr.ecr.ap-south-1.amazonaws.com/argo-cd-react:latest
        ports:
        - containerPort: 3000
