k8s/svc-react.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: nginx
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
